<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ai.gebo</groupId>
	<artifactId>ai.gebo.parent</artifactId>
	<version>0.9.9.7-SNAPSHOT</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.5</version>
	</parent>
	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<org.eclipse.jgit.version>6.10.0.202406032230-r</org.eclipse.jgit.version>
	
		<spring.ai.version>1.0.0</spring.ai.version> 
		
		<version.swagger.codegen>2.4.44</version.swagger.codegen>
	</properties>
	<modules>
		<module>gebo.boot</module>
		<module>gebo.systems.parent</module>
		<module>gebo.ragsystem.parent</module>
		<module>gebo.architecture.parent</module>
		<module>gebo.system.ingestion</module>
		<module>gebo.ui</module>
		<module>gebo.jobs.services</module>
		<module>gebo.config</module>
		<module>gebo.config.services</module>
		<module>gebo.fastsetup</module>
		<module>gebo.core.parent</module>
		<module>gebo.apps.parent</module>		
		<module>gebo.modules.pocs</module>
		<module>gebo.integrations.clients</module>
		<module>gebo.llms.parent</module>
		<module>gebo.buildsystems.parent</module>
	</modules>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	
	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories> 
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<finalName>
						${project.groupId}-${project.artifactId}-${project.version}</finalName>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Gebo.ai Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/geboai/Gebo.ai</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>		
	</distributionManagement>
</project>